# BrokenTC22

./: .gitignore  README.md  install_protobuf.bat  vcpkg.json
BrokenTC2_2/: .clang-format  CMakeLists.txt  deploy.bat  main.cpp  main.qml  rootRc.qrc
BrokenTC2_2/assets/: app_icon_resource.rc  qtquickcontrols2.conf  resources.qrc
BrokenTC2_2/internal_libs/: CMakeLists.txt
BrokenTC2_2/internal_libs/DataStructures/: CMakeLists.txt
BrokenTC2_2/internal_libs/DataStructures/include/DataStructures/: games.hpp  path_utils.hpp  structures.hpp  structures_macros.hpp  structures_utils.hpp
BrokenTC2_2/internal_libs/DataStructures/src/: games.cpp  path_utils.cpp  structures.cpp
BrokenTC2_2/internal_libs/GitVersion/: CMakeLists.txt  generate_cpp.py  git_version.hpp  git_version_structs.hpp  git_version_template.txt
BrokenTC2_2/internal_libs/GitVersion/tests/: CMakeLists.txt  versions_tests.cpp
BrokenTC2_2/internal_libs/Logger/: CMakeLists.txt
BrokenTC2_2/internal_libs/Logger/include/Logger/: logger.hpp  logger_setup.hpp
BrokenTC2_2/internal_libs/Logger/src/: constants.hpp
BrokenTC2_2/internal_libs/ProtoMessages/: CMakeLists.txt  fix_protobuf_include.py
BrokenTC2_2/internal_libs/ProtoMessages/include/ProtoMessages/: games.hpp  proto_helper.hpp  soft_controls.hpp
BrokenTC2_2/internal_libs/ProtoMessages/proto/: games.proto  soft_controls.proto  testProto.proto
BrokenTC2_2/internal_libs/QSDL/: CMakeLists.txt
BrokenTC2_2/internal_libs/QSDL/include/QSDL/: game_controller.hpp  sdl_event_handler.hpp  sdl_global.hpp
BrokenTC2_2/internal_libs/QSDL/src/: game_controller.cpp  sdl_event_handler.cpp  sdl_global.cpp
BrokenTC2_2/internal_libs/Utils/: CMakeLists.txt
BrokenTC2_2/internal_libs/Utils/include/Utils/: computations.hpp  json_utils.hpp  moving_average.hpp  xml_utils.hpp
BrokenTC2_2/internal_libs/Utils/src/: computations.cpp  json_utils.cpp  xml_utils.cpp
BrokenTC2_2/internal_libs/WinUtils/: CMakeLists.txt
BrokenTC2_2/internal_libs/WinUtils/include/WinUtils/: event_handler.hpp  utils.hpp  window_change_hook.hpp
BrokenTC2_2/internal_libs/WinUtils/src/: event_handler.cpp  utils.cpp
BrokenTC2_2/resources/: qtquickcontrols2.conf
BrokenTC2_2/src/: Form.ui  Main.qml  SoftStatusBar.qml  Style.qml  main.cpp
BrokenTC2_2/src/debug/: BoundingBox.qml  DebugWindow.qml  qml_log.cpp  qml_log.hpp  qstring_callback_sink.hpp
BrokenTC2_2/src/games/: config_editor.cpp  config_editor.hpp  easy_setup_interface.cpp  easy_setup_interface.hpp  gear_handler.cpp  gear_handler.hpp  gear_handler_factory.cpp  gear_handler_factory.hpp  gear_handler_the_crew.cpp  gear_handler_the_crew.hpp
BrokenTC2_2/src/panels/: ControllerListModel.qml  ControllerListPanel.qml  EasySetupPanel.qml  HelpPanel.qml  MainPanel.qml
BrokenTC2_2/src/system/controls_io/: InputHandler.cpp  InputHandler.hpp  controller_profiles_list.cpp  controller_profiles_list.hpp  keystroke_sequencer.cpp  keystroke_sequencer.hpp
BrokenTC2_2/src/system/logs/: logger.hpp  logger_setup.hpp  signal_handler.cpp  signal_handler.hpp
BrokenTC2_2/src/system/services/: controller_handler.cpp  controller_handler.hpp  game_profiles_handler.cpp  game_profiles_handler.hpp  keyboard_handler.cpp  keyboard_handler.hpp  model_registry.cpp  model_registry.hpp  screen_overlay_selector.cpp  screen_overlay_selector.hpp  service_manager.cpp  service_manager.hpp  text_to_speech_manager.cpp  text_to_speech_manager.hpp
BrokenTC2_2/src/tabs/: GameProfileTab.qml  SettingsTab.qml  SoftwareControlsTab.qml
BrokenTC2_2/src/utils/: QMLStyle.qml  Utils.js  macro_define.hpp  qmldir  qt_utils.hpp  shared_constants.hpp  style.hpp  time.hpp
BrokenTC2_2/src/widgets/: ButtonCancel.qml  ButtonOk.qml  ColorPicker.qml  ColoredImage.qml  ConfirmationDialog.qml  GameOverlay.qml  GroupedEditor.qml  LabelledIcon.qml  LoadingIcon.qml  LoadingLabel.qml  ScrollableTextArea.qml  ThemedPopup.qml  easy_setup_model.cpp  easy_setup_model.hpp
BrokenTC2_2/src/widgets/GameOverlay/: EnableDragForComponent.qml  GameOverlay.qml  GameOverlayEditMenu.qml  GameOverlayEditMenuArea.qml  SoftRunningIcon.qml
BrokenTC2_2/translations/: BrokenTC2_2_de.ts  BrokenTC2_2_fr.ts  BrokenTC2_2_ru.ts
Deployment/: buildSetup.iss  deploy.py
